--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: My Website
+email: im not currently putting my email out
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+  This is a test website used solely for the testing of my html and css knoledged
+baseurl: "sflemming1.github.io" # the subpath of your site, e.g. /blog
+url: "sflemming1.github.io" # the base hostname & protocol for your site
+twitter_username: dont have one
+github_username:  sflemming1
 
 # Build settings
 markdown: kramdown
