--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,12 @@
 
 # Site settings
 title: My Website
-email: im not currently putting my email out
+email: I'm not currently putting my email out
 description: > # this means to ignore newlines until "baseurl:"
   This is a test website used solely for the testing of my html and css knoledged
 baseurl: "sflemming1.github.io" # the subpath of your site, e.g. /blog
 url: "sflemming1.github.io" # the base hostname & protocol for your site
-twitter_username: dont have one
+twitter_username: Dont have one
 github_username:  sflemming1
 
 # Build settings
