--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: My Website
 email: I'm not currently putting my email out
 description: > # this means to ignore newlines until "baseurl:"
-  This is a test website used solely for the testing of my html and css knoledged
+  This is a test website used solely for the testing of my html and css knowledge
 baseurl: "sflemming1.github.io" # the subpath of your site, e.g. /blog
 url: "sflemming1.github.io" # the base hostname & protocol for your site
 twitter_username: Dont have one
